examples/datalog/18_advanced_patterns/124_cumulative.dl
% Test: Cumulative pattern
% Expected: Sum all values up to current
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_cumulative
.kg use test_cumulative

+data[(1, 10), (2, 20), (3, 30)].

% Sum of all values <= current id
+cumulative(Id, <SUM:Val>) :- data(Id, _), data(OtherId, Val), OtherId <= Id.

?- cumulative(Id, Sum).

.kg use default
.kg drop test_cumulative
